--- a/Accountant/templates/purchasebill.html
+++ b/Accountant/templates/purchasebill.html
@@ -8,27 +8,37 @@
   <body>
     <h1>Purchase Page</h1>
     <form action="post">
-      <input type="date" name="" id="" placeholder="Date" />
+      <input type="date" name="date" id="" placeholder="Date" required/>
       <br />
-      <select name="" id="">
-        <option value="">select name of seller</option>
+
+      <select name="p_name" id="" required>
+        {% for p in purchase%}
+        <option value="{{p.id}}">{{p.name}}</option>
+        {%endfor%}
       </select>
       <br />
       <br />
-      <select name="" id="">
-        <option value="">Name of the Raw Material</option>
+      
+      <select name="r_name1" id="" required>
+        {% for r in raw%}
+        <option value="{{r.id}}">{{r.RM_name}}</option>
+        {%endfor%}
+      </select>
+      <input type="number" name="piece" id="" placeholder="No. of piece"  required/>
+      <input type="text" name="amount" id="" placeholder="Amount of single piece" required />
+      <br />
+      <select name="r_name2" id="">
+        {% for r in raw%}
+        <option value="{{r.id}}">{{r.RM_name}}</option>
+        {%endfor%}
       </select>
       <input type="number" name="" id="" placeholder="No. of piece" />
       <input type="text" name="" id="" placeholder="Amount of single piece" />
       <br />
-      <select name="" id="">
-        <option value="">Name of the Raw Material</option>
-      </select>
-      <input type="number" name="" id="" placeholder="No. of piece" />
-      <input type="text" name="" id="" placeholder="Amount of single piece" />
-      <br />
-      <select name="" id="">
-        <option value="">Name of the Raw Material</option>
+      <select name="r_name3" id="">
+        {% for r in raw%}
+        <option value="{{r.id}}">{{r.RM_name}}</option>
+        {%endfor%}
       </select>
       <input type="number" name="" id="" placeholder="No. of piece" />
       <input type="text" name="" id="" placeholder="Amount of single piece" />
