--- a/Accountant/templates/creditors.html
+++ b/Accountant/templates/creditors.html
@@ -6,7 +6,23 @@
     <title>Creditors</title>
   </head>
   <body>
+    {% load humanize %}
     <h1>Creditors</h1>
-    This page will show the list of all creditors.
+    <table border="1">
+      <thead>
+        <tr>
+          <th>Party Name</th>
+          <th>Credit Amount</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for ii in creditors%}
+        <tr>
+          <td>{{ii.partyName}}</td>
+          <td>{{ii.difference|floatformat:2|intcomma:"l10n"}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </body>
 </html>
