--- a/Accountant/templates/paymentreceived.html
+++ b/Accountant/templates/paymentreceived.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Payment Received</h1>
-    <form action="post">
+    <!-- <form action="post">
       <input type="date" name="" id="" placeholder="Date" />
       <select name="" id="">
         <option value="">~select~</option>
@@ -16,6 +16,46 @@
       <br />
       <button type="reset">Reset</button>
       <button type="submit">Submit</button>
-    </form>
+    </form> -->
+    <div style="border: 1px solid black">
+      <form action="" method="post">
+        {% csrf_token %}
+        <table border="1">
+          <tbody>
+            <thead>
+              <th>Date</th>
+              <th>Sales Party Name :</th>
+              <th>Payment Paid</th>
+            </thead>
+            <!-- <br /> -->
+            <tr>
+              <td>
+                <input
+                  type="date"
+                  name="paymentReceivedDate"
+                  id="paymentReceivedDate"
+                />
+              </td>
+              <td>
+                <select name="paymentReceivedParty" id="paymentReceivedParty">
+                  {% for p in party%}
+                  <option value="{{p.id}}">{{p.name}}</option>
+                  {% endfor %}
+                </select>
+              </td>
+              <td>
+                <input
+                  type="text"
+                  name="paymentReceivedAmount"
+                  id="paymentReceivedAmount"
+                  placeholder="Enter Amount of Payment Received"
+                />
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <button type="submit">Submit Payment Received</button>
+      </form>
+    </div>
   </body>
 </html>
