--- a/Inventory/templates/displayfinishgoods.html
+++ b/Inventory/templates/displayfinishgoods.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raw Materials Table</title>
+    <title>Finish Goods Table</title>
     <style>
         table {
             width: 100%;
